--- a/Team.html
+++ b/Team.html
@@ -437,7 +437,7 @@
 
 
 <div class="row">
-        <div class="col s2">
+        <div class="col s2 left">
 
      <font face="arial" size="4" color="#1565c0"><b>&nbsp&nbsp&nbsp&nbspSUSPENSION&nbspAND&nbspSTEERING</b></font>
         </div>
