--- a/Team.html
+++ b/Team.html
@@ -432,9 +432,9 @@
      
      
 <div class="row">
-        <div class="col s14 left">
+        <div class="col s3 left">
 
-     <font face="arial" size="4" color="#1565c0"><b>&nbsp&nbsp&nbspMUSPENSION&nbspAND&nbspSTEERING</b></font>
+     <font face="arial" size="4" color="#1565c0"><b>&nbsp&nbsp&nbspSUSPENSION&nbspAND&nbspSTEERING</b></font>
         </div>
       </div>
   <div class="row center">
