--- a/Team.html
+++ b/Team.html
@@ -303,7 +303,7 @@
 
 
 <div class="row">
-        <div class="col s14 left">
+        <div class="col s5 left">
 
      <font face="arial" size="4" color="#1565c0"><b>&nbsp&nbsp&nbspMANUFACTURING&nbspAND&nbspPROCUREMENT</b></font>
         </div>
@@ -419,8 +419,8 @@
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp Vivek Kumar Singh  </b><br><font color="#1565c0" size="3">&nbspVehicle Dynamics Head</font><br><font size="3"></font></font></center></p>
 
-        </div>
-   </div-->
+        </div> -->
+</div>
 
 
 
