--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
 
       <a href="aboutus.html"><img class="logo" src="racers1.png"></a>
+      <h5><font face="Arial" size="6" color="#1565c0" ><b>&nbsp&nbsp&nbspRacers IITJ</b></font></h5>
       <ul>
 
         <li><a class="active" href="index.html">Home</a></li>
