--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
 <header class="large">
 
 
-      <a href="aboutus.html"><img class="logo" src="racers1.png"></a>
-      <h5><font face="Arial" size="6" color="#1565c0" ><br><b>&nbsp&nbsp&nbspRacers IITJ</b></font></h5>
+      <img class="logo" src="racers1.png">
       <ul>
-        <li>SAE</li>
+        
         <li><a class="active" href="index.html">Home</a></li>
         <li><a  href="SAE.html">SAE</a></li>
         <li><a href="Cars.html">Cars</a></li>
