--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <header class="large">
 
 
-      <img class="logo" src="racers1.png">
+      <br><img class="logo" src="racers1.png">
       <ul>
         
         <li><a class="active" href="index.html">Home</a></li>
