--- a/Team.html
+++ b/Team.html
@@ -309,19 +309,32 @@
         </div>
       </div>
    <div class="row center">
-  <div class="col s5">
-  </div>
-
-  <div class="col s3">
+         <div class="col s2">
+        </div>
+         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
       <img src="AJAY.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Ajay Kumar </b><br><font color="#1565c0" size="3"></font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Ajay Kumar </b><br><font color="#1565c0" size="3">&nbspManufacturing&nbspHead</font></font></center></p>
 
         </div>
-   </div>
+
+        <div class="col s3">
+        </div>
+
+
+        <div class="col s3">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="ANIRUDH.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>&nbsp Anirudh Tomar</b><br><font color="#1565c0" size="3">&nbspProcurement&nbspHead</font></font></center></p>
+
+        </div>
+      </div>
 
 
 
