--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 
 
-<!-- news feed starts starts
+<!--news feed starts starts-->
   <div class="parallax-container">
     <div class="section">
 <div class="row center">
@@ -236,7 +236,7 @@
       </div>
 
     </div>
-  </div> -->
+  </div> 
 
 
 
@@ -285,7 +285,7 @@
           </div>
           <div class="col s10">
           <font face="Arial" size="4"><br>
-<b>Design & FEA-</b> Design a light, compact and sturdy chassis supporting all subsystems<br><br>
+<b>Roll Cage-</b> Design a light, compact and sturdy chassis supporting all subsystems<br><br>
 <b>Transmission-</b> Design a robust powertrain assembly which satisfies performance requirements of the vehicle <br><br>
 <b>Suspension-</b> Responsible for maintaining vehicle stability and ride comfort<br><br>
 <b>Steering-</b> Implement a responsive steering system to provide minimum turning radius <br><br>
