--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 
 
-<!--news feed starts starts-->
+<!--news feed starts starts
   <div class="parallax-container">
     <div class="section">
 <div class="row center">
@@ -236,12 +236,12 @@
       </div>
 
     </div>
-  </div> 
+  </div> -->
 
 
 
 
-<!-- video starts starts
+<!-- video starts starts  -->
   <div class="parallax-container valign-wrapper" style="height:500px">
     <div class="section no-pad-bot">
       <div class="container">
@@ -259,7 +259,7 @@
       </div>
     </div>
     <div class="parallax"><img src="11.jpg" alt="Unsplashed background img 3" width="100%"></div>
-  </div> -->
+  </div> 
 
 <!-- material starts starts -->
 <div class="container">
