--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 <header class="large">
 
 
-      <br><img class="logo" src="racers1.png">
+      <a href="aboutus.html"><img class="logo" src="racers1.png"></a>
       <ul>
-        
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a  href="SAE.html">SAE</a></li>
+
+        <li><a  href="index.html">Home</a></li>
+        <li><a href="SAE.html">SAE</a></li>
         <li><a href="Cars.html">Cars</a></li>
-        <li><a href="Team.html">Team</a></li>
+        <li><a  class="active" href="Team.html">Team</a></li>
         <li><a href="Sponsors.html">Sponsors</a></li>
         <li><a href="Contacts.html">Contact Us</a></li>
       </ul>
@@ -241,7 +241,7 @@
 
 
 
-<!-- video starts starts  -->
+<!-- video starts starts  
   <div class="parallax-container valign-wrapper" style="height:500px">
     <div class="section no-pad-bot">
       <div class="container">
@@ -259,7 +259,7 @@
       </div>
     </div>
     <div class="parallax"><img src="11.jpg" alt="Unsplashed background img 3" width="100%"></div>
-  </div> 
+  </div> -->
 
 <!-- material starts starts -->
 <div class="container">
