--- a/Cars.html
+++ b/Cars.html
@@ -95,7 +95,7 @@
             </div>
 
             <div class="card-action">
-              <a href="#"><font face="arial" size="4" color="#1565c0">VAAYU 1.0</font></a>
+              <a href="vaayu 1.0.html"><font face="arial" size="4" color="#1565c0">VAAYU 1.0</font></a>
             </div>
           </div>
         </div>
