--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
       <a href="aboutus.html"><img class="logo" src="racers1.png"></a>
       <ul>
 
-        <li><a  href="index.html">Home</a></li>
+        <li><a  class="active" href="index.html">Home</a></li>
         <li><a href="SAE.html">SAE</a></li>
         <li><a href="Cars.html">Cars</a></li>
-        <li><a  class="active" href="Team.html">Team</a></li>
+        <li><a  href="Team.html">Team</a></li>
         <li><a href="Sponsors.html">Sponsors</a></li>
         <li><a href="Contacts.html">Contact Us</a></li>
       </ul>
