--- a/Team.html
+++ b/Team.html
@@ -314,26 +314,15 @@
          <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="AJAY.jpg" height="50%">
-    </div>
-  </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Ajay Kumar </b><br><font color="#1565c0" size="3">&nbspManufacturing&nbspHead</font></font></center></p>
-
-        </div>
-
-        <div class="col s3">
-        </div>
-
-
-        <div class="col s3">
-  <div class="card">
-    <div class="card-image "  >
       <img src="ANIRUDH.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Anirudh Tomar</b><br><font color="#1565c0" size="3">&nbspProcurement&nbspHead</font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Anirudh Tomar
+ </b><br><font color="#1565c0" size="3">&nbsp Head</font><br></font></center></p>
 
         </div>
+   </div>
+
       </div>
 
 
@@ -458,10 +447,10 @@
          <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="ABHIJEET.jpg" height="50%">
+      <img src="AJAY.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Abhijeet Sutar </b><br><font color="#1565c0" size="3">&nbspHead</font><br><font size="3"></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Ajay Kumar </b><br><font color="#1565c0" size="3">&nbspHead</font><br><font size="3"></font></center></p>
 
         </div>
 
@@ -728,18 +717,6 @@
 
 
          <div class="col s1">
-        </div>
-         <div class="col s3">
-  <div class="card">
-    <div class="card-image "  >
-      <img src="HEMAN.jpg" height="50%">
-    </div>
-  </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Heman </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
-
-        </div>
-
-        <div class="col s1">
         </div>
 
 
