--- a/Team.html
+++ b/Team.html
@@ -308,22 +308,21 @@
      <font face="arial" size="4" color="#1565c0"><b>&nbsp&nbsp&nbspMANUFACTURING&nbspAND&nbspPROCUREMENT</b></font>
         </div>
       </div>
-   <div class="row center">
-         <div class="col s2">
-        </div>
-         <div class="col s3">
+  <div class="row center">
+  <div class="col s5">
+  </div>
+
+  <div class="col s3">
   <div class="card">
     <div class="card-image "  >
       <img src="ANIRUDH.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Anirudh Tomar
- </b><br><font color="#1565c0" size="3">&nbsp Head</font><br></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp ANIRUDH TOMAR
+ </b><br><font color="#1565c0" size="3">&nbsp Head</font><br><font size="3">+91-9694083499</font></font></center></p>
 
         </div>
    </div>
-
-      </div>
 
 
 
@@ -442,7 +441,7 @@
         </div>
       </div>
   <div class="row center">
-         <div class="col s1">
+         <div class="col s2">
         </div>
          <div class="col s3">
   <div class="card">
@@ -454,7 +453,7 @@
 
         </div>
 
-        <div class="col s1">
+        <div class="col s3">
         </div>
 
 
@@ -467,18 +466,6 @@
   <p><center><font face="Arial" size="4"><b>&nbsp Aditi Tiwari </b><br><font color="#1565c0" size="3">&nbsp</font><br></center></p>
 
         </div>
-     <div class="col s1">
-        </div>
-         <div class="col s3">
-  <div class="card">
-    <div class="card-image "  >
-      <img src="AJAY.jpg" height="50%">
-    </div>
-  </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Ajay Kumar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
-
-        </div>
-
       </div>
 
 
@@ -716,7 +703,7 @@
     <div class="row center">
 
 
-         <div class="col s1">
+         <div class="col s2">
         </div>
 
 
@@ -729,7 +716,7 @@
   <p><center><font face="Arial" size="4"><b>&nbsp Chaitanya Bagul </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
-    <div class="col s1">
+    <div class="col s3">
         </div>
 
 
