--- a/Sponsors.html
+++ b/Sponsors.html
@@ -106,7 +106,7 @@ By collaborating with us you get an opportunity to get publicized at on-ground a
 
 <div style="border:2px ">
 <object data="Brochure 2020.pdf" type="application/pdf" width="100%" height="700px">
-  <p>Alternative text - include a link <a href="Brochure.pdf">to the PDF!</a></p>
+  <p>Alternative text - include a link <a href="Brochure 2020.pdf">to the PDF!</a></p>
 </object>
 </div>
 
