--- a/Sponsors.html
+++ b/Sponsors.html
@@ -105,8 +105,8 @@ By collaborating with us you get an opportunity to get publicized at on-ground a
 <b>Kindly have a look at our marketing brochure and events timeline to get details of how you can contribute and be an integral part of our team.</b></font><br><br></p>
 
 <div style="border:2px ">
-<object data="Brochure 2020.pdf" type="application/pdf" width="100%" height="700px">
-  <p>Alternative text - include a link <a href="Brochure 2020.pdf">to the PDF!</a></p>
+<object data="Final Brochure.pdf" type="application/pdf" width="100%" height="700px">
+  <p>Alternative text - include a link <a href="Final Brochure.pdf">to the PDF!</a></p>
 </object>
 </div>
 
