--- a/Contacts.html
+++ b/Contacts.html
@@ -97,7 +97,7 @@
             <b>Address<br></b>
             Indian Institute of Technology Jodhpur <br>Nagaur Road, NH 65<br> Karwad, Jodhpur <br>Rajasthan 342037<br><br>
 
-            <b>Marketing Head :</b> Mayank Tak<br> <b>Phone :</b> 8130807788<br><b>Email Id :</b> racers@iitj.ac.in<br><b>Website :</b> http://www.racersiitj.in
+            <b>Marketing Head :</b> Mayank Tak<br> <b>Phone :</b> 8130807788<br><b>Email Id :</b> racers@iitj.ac.in<br><b>Website :</b> http://www.racersiitj.co.in
           </font></p>
 
         </div>
