--- a/Team.html
+++ b/Team.html
@@ -112,7 +112,7 @@
          <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="ADITI.jpg" height="50%">
+      <img src="smukhopadhyay.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp Dr. Sudipto Mukhopadhyay </b><br><font color="#1565c0" size="3"></font></font></center></p>
@@ -126,7 +126,7 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="ANKIT.jpg" height="50%">
+      <img src="jscpandey.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp Dr. Chandan Pandey</b><br><font color="#1565c0" size="3">&nbsp</font><br></font></center></p>
