--- a/index.html
+++ b/index.html
@@ -285,12 +285,12 @@
           </div>
           <div class="col s10">
           <font face="Arial" size="4"><br>
-<b>Roll Cage-</b> Design a light, compact and sturdy chassis supporting all subsystems<br><br>
+<b>Roll Cage-</b> Design a light, compact and sturdy chassis supporting all subsystems<br><br><br>
 <b>Transmission-</b> Design a robust powertrain assembly which satisfies performance requirements of the vehicle <br><br>
 <b>Suspension-</b> Responsible for maintaining vehicle stability and ride comfort<br><br>
 <b>Steering-</b> Implement a responsive steering system to provide minimum turning radius <br><br>
-<b>Braking-</b> Assemble a reliable braking system for driver safety <br><br><br><br>
-<b>Manufacturing & Quality-</b> Overlook entire manufacturing phase along with advanced manufacturing techniques and performs regular checks on overall built quality<br><br><br>
+<b>Braking-</b> Assemble a reliable braking system for driver safety <br><br>
+<b>Manufacturing & Quality-</b> Overlook entire manufacturing phase along with advanced manufacturing techniques and performs regular checks on overall built quality<br><br>
 <b>Marketing & Media-</b> Reach out to potential sponsors and handles overall media impact of the team and its sponsors<br><br>
 
 </font>
