--- a/index.html
+++ b/index.html
@@ -278,14 +278,14 @@
           <img src="logo\4.png" style="height:80px">
           <img src="logo\1.png" style="height:60px">
           <img src="logo\2.png" style="height:95px">
-          <img src="logo\6.png" style="height:80px">
-          <img src="logo\3.png" style="height:60px">
+          <img src="logo\6.png" style="height:70px">
+          <img src="logo\3.png" style="height:50px">
           <img src="logo\5.png" style="height:85px">
 
           </div>
           <div class="col s10">
           <font face="Arial" size="4"><br>
-<b>Roll Cage-</b> Design a light, compact and sturdy chassis supporting all subsystems<br><br><br>
+<b>Roll Cage-</b> Design a light, compact and sturdy chassis supporting all subsystems<br><br>
 <b>Transmission-</b> Design a robust powertrain assembly which satisfies performance requirements of the vehicle <br><br>
 <b>Suspension-</b> Responsible for maintaining vehicle stability and ride comfort<br><br>
 <b>Steering-</b> Implement a responsive steering system to provide minimum turning radius <br><br>
