--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
         <li><a  class="active" href="index.html">Home</a></li>
         <li><a href="SAE.html">SAE</a></li>
         <li><a href="Cars.html">Cars</a></li>
-        <li><a  href="Team.html">Team</a></li>
+        <li><div class="dropdown">
+           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Team</button>
+     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="Team.html">2020</a>
+    <a class="dropdown-item" href="#">2021</a></div>
+    </div></li>
         <li><a href="Sponsors.html">Sponsors</a></li>
         <li><a href="Contacts.html">Contact Us</a></li>
       </ul>
