--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Team</button>
      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
     <a class="dropdown-item" href="Team.html">2020</a>
-    <a class="dropdown-item" href="#">2021</a></div>
+    <a class="dropdown-item" href="Team1.html">2021</a></div>
     </div></li>
         <li><a href="Sponsors.html">Sponsors</a></li>
         <li><a href="Contacts.html">Contact Us</a></li>
