--- a/index.html
+++ b/index.html
@@ -38,12 +38,7 @@
         <li><a  class="active" href="index.html">Home</a></li>
         <li><a href="SAE.html">SAE</a></li>
         <li><a href="Cars.html">Cars</a></li>
-        <li><div class="dropdown">
-           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Team</button>
-     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="Team.html">2020</a>
-    <a class="dropdown-item" href="Team1.html">2021</a></div>
-    </div></li>
+        <li><a  class="active" href="Team1.html">Team</a></li>
         <li><a href="Sponsors.html">Sponsors</a></li>
         <li><a href="Contacts.html">Contact Us</a></li>
       </ul>
@@ -116,7 +111,7 @@
 
       <div class="row">
         <div class="col s12 left">
-          <h5><font face="Arial" size="6" color="#1565c0" ><center><b>** Achieved Rank 25 in Virtual BAJA SAEINDIA 2018 **</b></center></font></h5>
+          <h5><font face="Arial" size="6" color="#1565c0" ><center><b>** Achieved Rank 18 in Virtual BAJA SAEINDIA 2021 **</b></center></font></h5>
 
         </div>
       </div>
