--- a/Contacts.html
+++ b/Contacts.html
@@ -38,7 +38,7 @@
         <li><a  href="index.html">Home</a></li>
         <li><a href="SAE.html">SAE</a></li>
         <li><a href="Cars.html">Cars</a></li>
-        <li><a href="Team.html">Team</a></li>
+        <li><a href="Team1.html">Team</a></li>
         <li><a href="Sponsors.html">Sponsors</a></li>
         <li><a class="active" href="Contacts.html">Contact Us</a></li>
       </ul>
@@ -97,7 +97,7 @@
             <b>Address<br></b>
             Indian Institute of Technology Jodhpur <br>Nagaur Road, NH 65<br> Karwad, Jodhpur <br>Rajasthan 342037<br><br>
 
-            <b>Marketing Head :</b> Mayank Tak<br> <b>Phone :</b> 8130807788<br><b>Email Id :</b> racers@iitj.ac.in<br><b>Website :</b> http://www.racersiitj.co.in
+            <b>Marketing Head :</b> Mayank Rathor<br> <b>Phone :</b> 9660813373<br><b>Email Id :</b> racers@iitj.ac.in<br><b>Website :</b> http://www.racersiitj.co.in
           </font></p>
 
         </div>
