--- a/Cars.html
+++ b/Cars.html
@@ -38,7 +38,7 @@
         <li><a  href="index.html">Home</a></li>
         <li><a href="SAE.html">SAE</a></li>
         <li><a class="active" href="Cars.html">Cars</a></li>
-        <li><a href="Team1.html">Team</a></li>
+        <li><a href="Team.html">Team</a></li>
         <li><a href="Sponsors.html">Sponsors</a></li>
         <li><a href="Contacts.html">Contact Us</a></li>
       </ul>
